UI v3.1.9: Finalized workbench layout and mobile sliding sidebar.

--- a/field_notes/intercom/index.html
+++ b/field_notes/intercom/index.html
@@ -109,10 +109,50 @@
             background: var(--accent-color);
             transition: width 0.1s ease;
         }
+
+        /* Mobile Reports Floating Button */
+        #mobile-reports-toggle {
+            display: none;
+            position: fixed;
+            top: 15px;
+            right: 15px;
+            z-index: 2000;
+            background: #000;
+            color: var(--accent-color);
+            border: 2px solid var(--accent-color);
+            padding: 8px 12px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            font-weight: bold;
+        }
+
+        @media screen and (max-width: 1024px) {
+            main { height: auto; display: block; }
+            #intercom-main { width: 100%; border-right: none; }
+            #mobile-reports-toggle { display: block; }
+            
+            #report-sidebar {
+                position: fixed;
+                top: 0;
+                right: -100%; /* Hidden by default */
+                width: 80%;
+                height: 100vh;
+                z-index: 1500;
+                transition: right 0.3s ease;
+                display: block; /* Ensure it's block for transition */
+                background: #050505;
+                border-left: 2px solid var(--accent-color);
+            }
+            #report-sidebar.active { right: 0; }
+            
+            #chat-console { height: 50vh; }
+        }
     </style>
 </head>
 <body>
-    <button id="menu-toggle" aria-label="Toggle Navigation">☰</button>
+    <button id="menu-toggle" aria-label="Toggle Navigation">☰ MENU</button>
+    <button id="mobile-reports-toggle" aria-label="Toggle Reports">📋 REPORTS</button>
 
     <nav id="sidebar">
         <h1>The Field Manual</h1>
@@ -159,13 +199,16 @@
         </div>
 
         <div id="report-sidebar">
-            <div class="report-header">🧠 REPORT WRITER</div>
+            <div class="report-header">
+                🧠 REPORT WRITER
+                <button id="download-report" title="Download as Markdown" style="float: right; background: none; border: 1px solid #444; color: #888; cursor: pointer; font-size: 0.7rem; padding: 2px 5px;">💾 SAVE</button>
+            </div>
             <div id="report-body" class="typewriter">
                 <em>The Brain's strategic drafts and long-form summaries will appear here...</em>
             </div>
         </div>
     </main>
 
-    <script src="../intercom_v2.js?v=f5c261d6"></script>
+    <script src="../intercom_v2.js?v=cae0aee1"></script>
 </body>
 </html>
