UI v3.1.9: Updated Research Hub to reflect 3x3 CVT, Internal Debate, and Diamond Dream implementations.

--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -15,7 +15,7 @@
             overflow: hidden;
         }
         .hero-section::before {
-            content: "v3.1.6";
+            content: "v3.1.9";
             position: absolute;
             top: 10px;
             right: 10px;
@@ -116,20 +116,20 @@
 
             <div class="brag-grid">
                 <div class="brag-card">
-                    <div class="brag-title">Liger-Kernel</div>
-                    <div class="brag-text">Achieved 80% VRAM reduction on Turing GPUs. Enabled high-density reasoning loops for Mistral-7B on restricted hardware.</div>
+                    <div class="brag-title">3x3 CVT Synthesis</div>
+                    <div class="brag-text">Automated career impact indexing. Correlates 18 years of technical scars with yearly strategic goals for high-density candidate positioning.</div>
                 </div>
                 <div class="brag-card">
-                    <div class="brag-title">Report Writer</div>
-                    <div class="brag-text">Implemented physical decoupling of conversational chat and strategic synthesis. Long-form drafts are now routed to a dedicated blueprint sidebar.</div>
+                    <div class="brag-title">Internal Debate</div>
+                    <div class="brag-text">Implemented Moderated Consensus. Resolves complex technical contradictions by dueling independent reasoning paths before a lead moderator.</div>
                 </div>
                 <div class="brag-card">
-                    <div class="brag-title">Continuous Burn</div>
-                    <div class="brag-text">Automated background refinement loop that critiques and upgrades historical logs into Rank 4 "Diamond Wisdom" artifacts.</div>
+                    <div class="brag-title">Diamond Dreams</div>
+                    <div class="brag-text">Multi-host memory consolidation. Synthesizes chaotic short-term logs via the Windows 4090 into durable, long-term RAG wisdom.</div>
                 </div>
                 <div class="brag-card">
-                    <div class="brag-title">Bicameral Sync</div>
-                    <div class="brag-text">Established a multi-host Dream Cycle. Short-term interaction logs on Linux are synthesized via the Windows 4090 Brain into long-term RAG memory.</div>
+                    <div class="brag-title">Workbench UI</div>
+                    <div class="brag-text">Physical decoupling of chat and synthesis. Streams strategic reports and code drafts to a dedicated 50/50 sidebar with Markdown export.</div>
                 </div>
             </div>
         </section>
@@ -140,16 +140,40 @@
             <div class="roadmap-item">
                 <div class="roadmap-meta">STABLE</div>
                 <div class="roadmap-content">
-                    <h4>FS-Researcher (2602.01566) <span class="badge badge-active">Active</span></h4>
-                    <p>Implemented the Context Builder (Nibbler) and Report Writer (Web Intercom) bridge. The file system is now the durable primary memory source for the Brain.</p>
+                    <h4>Internal Debate: Moderated Consensus <span class="badge badge-active">Active</span></h4>
+                    <p>Resolves hallucinations by dueling independent Brain paths. A moderator synthesizes the final evidenced-backed verdict in the Report Writer sidebar.</p>
                 </div>
             </div>
 
             <div class="roadmap-item">
                 <div class="roadmap-meta">STABLE</div>
                 <div class="roadmap-content">
-                    <h4>TTCS: Test-Time Curriculum Synthesis <span class="badge badge-active">Active</span></h4>
-                    <p>The "Synthesize-then-Solve" loop ensures the model critiques its own extraction logic before committing artifacts to the archive.</p>
+                    <h4>3x3 CVT Resume Builder <span class="badge badge-active">Active</span></h4>
+                    <p>Correlates strategic performance reviews with technical artifacts to build high-density candidate-value summaries for specific years or roles.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">STABLE</div>
+                <div class="roadmap-content">
+                    <h4>Diamond Dreaming: Memory Cycle <span class="badge badge-active">Active</span></h4>
+                    <p>Subconscious consolidation pipeline. Purges raw interaction streams and stores high-fidelity "Diamond Wisdom" abstracts in the long-term archive.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">STABLE</div>
+                <div class="roadmap-content">
+                    <h4>FS-Researcher (2602.01566) <span class="badge badge-active">Active</span></h4>
+                    <p>Implemented the Context Builder (Nibbler) and Report Writer (Web Intercom) bridge. The file system is now the durable primary memory source.</p>
+                </div>
+            </div>
+
+            <div class="roadmap-item">
+                <div class="roadmap-meta">HORIZON</div>
+                <div class="roadmap-content">
+                    <h4>MAXS: Meta-Adaptive Exploration <span class="badge badge-research">Researching</span></h4>
+                    <p>Lookahead hooks to estimate the "Value of Information" before tool calls. Aims to optimize API/Token usage by pruning low-utility reasoning paths.</p>
                 </div>
             </div>
 
@@ -162,34 +186,10 @@
             </div>
 
             <div class="roadmap-item">
-                <div class="roadmap-meta">HORIZON</div>
-                <div class="roadmap-content">
-                    <h4>MiMo-V2: Multi-Objective RL <span class="badge badge-planned">Planned</span></h4>
-                    <p>Integrating Grafana/Prometheus telemetry as a reward signal. The agent's reasoning will be "punished" for high VRAM waste and "rewarded" for factual extraction hits.</p>
-                </div>
-            </div>
-
-            <div class="roadmap-item">
-                <div class="roadmap-meta">RESEARCH</div>
-                <div class="roadmap-content">
-                    <h4>WideSeek-R1: Parallel Width Scaling <span class="badge badge-research">Researching</span></h4>
-                    <p>Orchestrating parallel sub-agents to extract granular metadata (dates, tools, error codes) simultaneously to improve overall F1 score of the archive.</p>
-                </div>
-            </div>
-
-            <div class="roadmap-item">
                 <div class="roadmap-meta">FUTURE</div>
                 <div class="roadmap-content">
                     <h4>vLLM High-Throughput Serving <span class="badge badge-planned">Planned</span></h4>
                     <p>Transitioning from Ollama to vLLM to achieve state-of-the-art serving throughput for the Web Intercom and multi-agent loops.</p>
-                </div>
-            </div>
-
-            <div class="roadmap-item">
-                <div class="roadmap-meta">FUTURE</div>
-                <div class="roadmap-content">
-                    <h4>3x3 CVT Resume Builder <span class="badge badge-planned">Planned</span></h4>
-                    <p>Automated re-indexing of 18 years of technical notes into high-density candidate-value formats for targeted career positioning.</p>
                 </div>
             </div>
         </section>
@@ -198,7 +198,7 @@
             <h3>Strategic Grounding Statistics</h3>
             <div id="stats-panel" style="font-family: monospace; color: #555; font-size: 0.85rem;">
                 <!-- Updated via build system or manual entry -->
-                Refined Artifacts: 910 | Strategy Anchors: 14 | Diamond Dreams: 1 | VRAM Efficiency: +80%
+                Refined Artifacts: 914 | Strategy Anchors: 14 | Diamond Dreams: 1 | VRAM Efficiency: +80%
             </div>
         </section>
     </main>
