UI v3.1.9: Integrated Expertise hierarchy into Artifact Map and deployed blueprint indexer.

--- a/field_notes/files.html
+++ b/field_notes/files.html
@@ -219,7 +219,7 @@
     </main>
 
     <script>
-        const YEARS = ['ALL', 'DOCS', '2024', '2023', '2022', '2021', '2020', '2019'];
+        const YEARS = ['ALL', 'EXPERTISE', 'DOCS', '2024', '2023', '2022', '2021', '2020', '2019'];
         const DRIVE_IDS = {
             'DOCS': '1uZX2RxK49MAd9u46uNDMyXB2eesH-UiE',
             '2019': '10R02sdAEPRJoWfVdiSPKoM8IvOt1r--4',
