--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research & Strategy | Jason Allred</title>
-    <link rel="stylesheet" href="style.css?v=10.3">
+    <link rel="stylesheet" href="style.css?v=8a67fc1a">
     <style>
         .hero-section {
             background: linear-gradient(135deg, #0d1117 0%, #161b22 100%);
@@ -90,21 +90,7 @@
     <button id="menu-toggle" aria-label="Toggle Navigation">☰</button>
 
     <nav id="sidebar">
-        <h1>The Field Manual</h1>
-        <div class="subtitle">Jason Allred</div>
-        <section id="mission-control">
-            <h2>Mission Control</h2>
-            <ul>
-                <li><a href="stories.html" class="mission-link">Stories</a></li>
-                <li><a href="timeline.html" class="mission-link">Notes: Logs</a></li>
-                <li><a href="files.html" class="mission-link">Artifacts: Files</a></li>
-                <li><a href="pager.html" class="mission-link">Pager: Alerting</a></li>
-                <li><a href="intercom/" class="mission-link">Intercom</a></li>
-                <li><a href="research.html" class="mission-link">Research Hub</a></li>
-                <li><a href="grafana.html" class="mission-link">Grafana</a></li>
-                <li><a href="https://code.jason-lab.dev" target="_blank" class="mission-link">VS Code (Remote)</a></li>
-            </ul>
-        </section>
+        <mission-control></mission-control>
     </nav>
 
     <main>
@@ -203,6 +189,7 @@
         </section>
     </main>
 
-    <script src="script.js?v=7.0"></script>
+    <script src="mission-control.js?v=476b9ef2"></script>
+    <script src="script.js?v=75defa3b"></script>
 </body>
 </html>
