--- a/field_notes/status.html
+++ b/field_notes/status.html
@@ -33,13 +33,18 @@
         .led-yielded { background: #007bff; box-shadow: 0 0 5px #007bff; }
 
         /* Telemetry Section */
-        .telemetry-box {
+        .telemetry-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+            gap: 20px;
             margin-bottom: 40px;
+        }
+        .telemetry-box {
             background: #000;
             border: 1px solid var(--border-color);
             padding: 10px;
         }
-        iframe { width: 100%; height: 400px; border: none; }
+        iframe { width: 100%; height: 350px; border: none; }
 
         /* Tree Overrides for Status */
         .alert-item {
@@ -95,15 +100,20 @@
         </section>
 
         <section id="telemetry">
-            <h2 class="section-title">Neural Uplink Telemetry (Power & Thermal)</h2>
+            <h2 class="section-title">Neural Uplink Telemetry (Power & GPU)</h2>
             <div style="margin-bottom: 10px; display: flex; gap: 10px;">
                 <button class="icon-btn" onclick="updateTime('1h')">1H</button>
                 <button class="icon-btn" onclick="updateTime('8h')">8H</button>
                 <button class="icon-btn" onclick="updateTime('24h')">24H</button>
                 <button class="icon-btn" onclick="updateTime('7d')">7D</button>
             </div>
-            <div class="telemetry-box">
-                <iframe id="grafana-iframe" src="https://monitor.jason-lab.dev/d-solo/pinky-status-01/neural-uplink-status?orgId=1&panelId=6&from=now-8h&to=now&theme=dark"></iframe>
+            <div class="telemetry-grid">
+                <div class="telemetry-box">
+                    <iframe id="grafana-power" src="https://monitor.jason-lab.dev/d-solo/pinky-status-01/neural-uplink-status?orgId=1&panelId=6&from=now-8h&to=now&theme=dark"></iframe>
+                </div>
+                <div class="telemetry-box">
+                    <iframe id="grafana-gpu" src="https://monitor.jason-lab.dev/d-solo/pinky-status-01/neural-uplink-status?orgId=1&panelId=8&from=now-8h&to=now&theme=dark"></iframe>
+                </div>
             </div>
         </section>
 
@@ -120,7 +130,8 @@
     <script>
         const consoleEl = document.getElementById('sys-console');
         const root = document.getElementById('log-tree-root');
-        const iframe = document.getElementById('grafana-iframe');
+        const iframePower = document.getElementById('grafana-power');
+        const iframeGpu = document.getElementById('grafana-gpu');
 
         function log(msg, type='info') {
             const div = document.createElement('div');
@@ -131,8 +142,9 @@
         }
 
         function updateTime(range) {
-            const baseUrl = "https://monitor.jason-lab.dev/d-solo/pinky-status-01/neural-uplink-status?orgId=1&panelId=6&theme=dark";
-            iframe.src = `${baseUrl}&from=now-${range}&to=now`;
+            const base = "https://monitor.jason-lab.dev/d-solo/pinky-status-01/neural-uplink-status?orgId=1&theme=dark";
+            iframePower.src = `${base}&panelId=6&from=now-${range}&to=now`;
+            iframeGpu.src = `${base}&panelId=8&from=now-${range}&to=now`;
             log(`Adjusting telemetry window to ${range}.`);
         }
 
