UI v3.2.7: Robust Hamburger v1.1 and modular sidebar hardening

--- a/field_notes/intercom.html
+++ b/field_notes/intercom.html
@@ -100,9 +100,10 @@
     </style>
 </head>
 <body>
-            <button id="menu-toggle" aria-label="Toggle Navigation">☰</button>
-        
-            <nav id="sidebar">
+    <button id="menu-toggle">☰ MENU</button>
+
+    <nav id="sidebar">
+
                 <mission-control></mission-control>
             </nav>
         
@@ -139,7 +140,7 @@
         </div>
     </main>
 
-    <script src="mission-control.js?v=33f8595b"></script>
+    <script src="mission-control.js?v=3e24dc45"></script>
     <script src="intercom_v2.js?v=cae0aee1"></script>
 </body>
 </html>
