--- a/field_notes/stories.html
+++ b/field_notes/stories.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css?v=8a67fc1a">
 </head>
 <body>
-    <button id="menu-toggle" aria-label="Toggle Navigation">☰</button>
+    <button id="menu-toggle">☰ MENU</button>
 
     <nav id="sidebar">
         <mission-control></mission-control>
@@ -293,7 +293,7 @@
 
     </main>
 
-    <script src="mission-control.js?v=33f8595b"></script>
+    <script src="mission-control.js?v=3e24dc45"></script>
     <script src="script.js?v=75defa3b"></script>
 </body>
 </html>
