UI v3.2.8: Final Authority Fix for hamburger menu and modular sidebar sync

--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -165,16 +165,10 @@
         </section>
     </main>
 
-    <script src="mission-control.js?v=bc4c43fc"></script>
+    <script src="mission-control.js?v=94e04f0a"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // Mobile Menu
-            const menuToggle = document.getElementById('menu-toggle');
-            const sidebar = document.getElementById('sidebar');
-            if (menuToggle && sidebar) {
-                menuToggle.onclick = (e) => { sidebar.classList.toggle('active'); e.stopPropagation(); };
-                document.querySelector('main').onclick = () => sidebar.classList.remove('active');
-            }
+            // Nothing needed here for mobile menu
         });
     </script>
 </body>
